added figures images

--- a/prepros.config
+++ b/prepros.config
@@ -918,6 +918,24 @@
     },
     "files": [
       {
+        "file": "config/checkers/main.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "config/chess/main.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "config/intellector/main.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "src/Board.js",
         "config": {
           "autoCompile": true
